<resources>
    <string name="app_name">我的畅行</string>
    <string name="order_head_title">工单</string>
    <string name="order_btn_handle">待处理</string>
    <string name="order_btn_handling">处理中</string>
    <string name="main_index_btn_one">工单</string>
    <string name="main_index_btn_two">工作</string>
    <string name="main_index_btn_three">我的</string>
    <string name="repairs_form_company">所属公司:</string>
    <string name="repairs_form_station">所属站点:</string>
    <string name="repairs_form_break">设备类型:</string>
    <string name="repairs_form_machine">故障设备:</string>
    <string name="mine_new_title">我的消息</string>
    <string name="mine_service">我的维修</string>
    <string name="bike_repairs">车辆维修</string>
    <string name="station_repairs">站点维修</string>
    <string name="mine_keep">自修保养</string>
    <string name="bike">车辆</string>
    <string name="station">站点</string>
    <string name="mine_send">我的派单</string>
    <string name="bike_service">车辆报修</string>
    <string name="station_service">站点报修</string>
    <string name="mine_return">我的归还</string>
    <string name="finished">已完成</string>
    <string name="applying">申请中</string>
    <string name="mine_repairs">我的报修</string>
    <string name="mine_check">我的审核</string>
    <string name="returned">归还</string>
    <string name="takeout">领料</string>
    <string name="mine_have">我的库存</string>
    <string name="parts">站点</string>
    <string name="net_error">网络异常</string>
    <string name="no_refresh_news">没有更新的数据了</string>
    <string name="no_more_news">没有更多的数据了</string>
    <string name="current_check">本次盘点数：</string>
    <string name="last_check">上次盘点数：</string>
    <string name="get_data_fail">获取数据失败！</string>
    <string name="defult_num">0</string>
    <string name="character">申请人:</string>
    <string name="check_take_back">审核退回</string>
    <string name="logined">登录中...</string>
    <string name="error_password">密码错误或者账户已过期</string>
    <string name="error_uesrname">用户名错误</string>
    <string name="change_codes">更换条码</string>
    <string name="bike_check">车辆盘点</string>
    <string name="keep_myself">自修保养</string>
    <string name="break_serving">车辆报修</string>
    <string name="about_us">关于我们</string>
    <string name="user_info">个人详情</string>
    <string name="company_address">地址：南京市玄武区红山南路长途客运总站司乘公寓8楼</string>
    <string name="company_phone_num">24小时客服电话 025-96155</string>

</resources>
