<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="@layout/activity_keep_by_myself">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/repairs_form_company"
            android:textSize="20sp"/>

        <TextView
            android:background="@null"
            android:textSize="20sp"
            android:singleLine="true"
            android:id="@+id/company_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:hint="选择所属公司"
            android:textColorHint="@color/text_hint_color"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_div_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/repairs_form_station"
            android:textSize="20sp"/>

        <TextView
            android:background="@null"
            android:textSize="20sp"
            android:id="@+id/station_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:hint="点击选择站点"
            android:singleLine="true"
            android:textColorHint="@color/text_hint_color"
            />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_div_bg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/repairs_form_break"
            android:textSize="20sp"/>

        <TextView
            android:background="@null"
            android:textSize="20sp"
            android:id="@+id/break_type"
            android:singleLine="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:hint="点击选择故障类型"
            android:textColorHint="@color/text_hint_color"
           />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_div_bg"/>
  <!--  <include layout="@layout/dividel_line"/>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/repairs_form_machine"
            android:textSize="20sp"/>

        <TextView
            android:background="@null"
            android:textSize="20sp"
            android:id="@+id/machine_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:hint="点击选择故障设备"
            android:textColorHint="@color/text_hint_color"
           />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/view_div_bg"/>


</merge>